# synap

./: .gdb_history  .gitignore  Cargo.toml  README.md  katex-header.html
.cargo/: config.toml
src/: lib.rs  main.rs
src/algebra/: algorithms.rs  matrix.rs  mod.rs
src/linear_algebra/: matrix.rs
src/nn/: mod.rs  nn.rs
