[package]
name = "synap"
version = "0.1.0"
edition = "2021"
description = "a tiny software neural network and linear algebra library"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
wasm-bindgen = "0.2.83"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lib]
crate-type = ["cdylib", "rlib"]

#[profile.release]
#opt-level = "s"
